<?xml version="1.0" encoding="utf-8"?>
<!-- 
     SPDX-FileCopyrightText: The Android Open Source Project
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<resources>
    <string name="device_title">RealmeParts</string>
    <string name="device_summary">Adjust Realme specific device settings</string>

    <!-- Display -->
    <string name="display_title">Display</string>

    <!-- CABC -->
    <string name="cabc_title">CABC Mode</string>
    <string name="cabc_dialogTitle">CABC Profiles</string>
    <string name="cabc_off">Off</string>
    <string name="cabc_normal">On</string>
    <string name="cabc_balanced">Balanced Mode</string>
    <string name="cabc_aggressive">Super power saving mode</string>

    <!-- DC dimming -->
    <string name="dc_mode_summary">DC Dimming reduces eye strain in low light conditions but may result in reduced image quality and poor color production.</string>
    <string name="dc_mode_title">DC-Dimming</string>
    <string name="tile_dc_mode">DC-Dimming</string>

    <!-- srgb mode -->
    <string name="srgb_mode_summary">sRGB mode for simpler colour display</string>
    <string name="srgb_mode_title">sRGB mode</string>
    <string name="tile_srgb_mode">sRGB</string>

    <!-- Speaker -->
    <string name="speaker_category">Speaker</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>

    <!-- Misc settings -->
    <string name="misc_title">Misc</string>

    <!-- otg mode -->
    <string name="otg_mode_summary">Enable USB-OTG power supply for external headphones and flash drives</string>
    <string name="otg_mode_title">Enable USB-OTG</string>
    <string name="tile_otg_mode">Enable USB-OTG</string>

    <!-- MTK Engineer Mode-->
    <string name="engineer_mode_title">MTK Engineer mode</string>
    <string name="engineer_mode_summary">Do not do anything you dont understand in here</string>

    <!-- Unsupported -->
    <string name="unsupported">Unsupported</string>
</resources>
